@@ -1,6 +1,11 @@
 2008-01-03  Alexander Larsson  <alexl@redhat.com>
 
         * daemon/gvfsbackendsftp.c:
+	Return icons
+	
+2008-01-03  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
 	Use right types for file times (#506494)
 
 2008-01-03  Alexander Larsson  <alexl@redhat.com>
